# dtekv-emulator-core

./: .cspell.json  .gitignore  Cargo.toml  DTEKV.md  HELP.md  README.md  TODO.md  default.nix  dtekv-riscv.elf.txt  shell.nix  test.raw
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
app/src/: index.js  index.tsx
benches/: sieves.rs
examples/: board_games.elf.txt  board_games.rs  hex_displays.rs
lib/: bus.rs  button.rs  cpu.rs  csr.rs  data.rs  exception.rs  gui.rs  hex_display.rs  instruction.rs  interrupt.rs  lib.rs  memory.rs  memory_mapped.rs  regs.rs  switch.rs  test_utils.rs  timer.rs  uart.rs  utils.rs  vga.rs
lib/bus/: mod.rs
lib/client/: mod.rs  shared_cpu.rs  start.rs  unsafe_cpu.rs
lib/client/website/: README  help.html  index.html
lib/cpu/: bus.rs  cpu.rs  csr.rs  debug_output.rs  mod.rs  regs.rs
lib/cpu/instructions/: branch.rs  (+10 more)
lib/csr/: csr.rs  csr_block.rs  mod.rs
lib/debug_console/: mod.rs
lib/instruction/: instruction.rs  mod.rs  newtype.rs  parse.rs
lib/io/: bus.rs  button.rs  device.rs  hex_display.rs  interruptable.rs  led_strip.rs  memory.rs  mod.rs  panic_on_access.rs  sdram.rs  switch.rs  timer.rs  uart.rs  vga.rs  vga_buffer.rs  vga_dma.rs
lib/peripheral/: bus.rs  button.rs  hex_display.rs  interruptable.rs  led_strip.rs  mod.rs  peripheral.rs  sdram.rs  switch.rs  timer.rs  uart.rs
lib/register/: mod.rs  register.rs  register_block.rs
roms/sieves/: Makefile  README.md  boot.S  linker.ld  main-O0.elf  main-O3.elf  sieves.c
src/: index.html  main.rs  style.css
tests/: cpu.rs  io.rs
(+12 files in other folders)
